--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume: Aaron Tanguma</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    
+    <h1>Aaron Tanguma</h1>
 </body>
 </html>
