Added email link to resume

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Aaron Tanguma</h1>
+    <nav><a href="mailto:the_guma@yahoo.com" class="email">Email Me</a></nav>
 </body>
 </html>
