--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1>Aaron Tanguma</h1>
-    <nav><a href="mailto:the_guma@yahoo.com" class="email">Email Me</a></nav>
-    </hr>
+    <header>
+        <h1>Aaron Tanguma</h1>
+    </header>
+    <div>
+     <nav><a href="mailto:the_guma@yahoo.com" class="email">Email Me</a></nav>
+    </div>
+    <hr>
 </body>
 </html>
