--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <hr>
     <div class="Experience">
         <h2>Experience</h2>
+        <p>2 published websites in HTML & CSS</p>
     </div>
 </body>
 </html>
