--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="Experience">
         <h2>Experience</h2>
         <p>2 published websites in HTML & CSS</p>
+        <p>6 Github Repositories</p>
     </div>
 </body>
 </html>
